force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/clofor_com_cfs__IndividualTarget__c.object-meta.xml
<CustomObject>
    <label>INDV Target</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>INDIVIDUAL TARGET ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INDV Target</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>