force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__ACTIVE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACTIVE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ACTIVE</label>
    <type>Checkbox</type>
</CustomField>