force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__AnnualTargetStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AnnualTargetStartDate__c</fullName>
    <label>ANNUAL TARGET START DATE</label>
    <type>Date</type>
</CustomField>