force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__CloKPIDataPull__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CloKPIDataPull__c</fullName>
    <label>DATA PULL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CloKPIDataPull</valueSetName>
    </valueSet>
</CustomField>