force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__KpiName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KpiName__c</fullName>
    <label>KPI NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>