force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__OrganizationAnnualTarget__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OrganizationAnnualTarget__c</fullName>
    <formula>clofor_com_cfs__OrganizationTargetID__r.clofor_com_cfs__AnnaulTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORGANIZATION ANNUAL TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>