force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__OrganizationMonthlyTarget__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OrganizationMonthlyTarget__c</fullName>
    <formula>clofor_com_cfs__OrganizationTargetID__r.clofor_com_cfs__MonthlyTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORGANIZATION MONTHLY TARGET</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>