force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__OrganizationTargetID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OrganizationTargetID__c</fullName>
    <label>ORGANIZATION TARGET ID</label>
    <referenceTo>clofor_com_cfs__OrganizationTarget__c</referenceTo>
    <relationshipLabel>INDIVIDUAL TARGET</relationshipLabel>
    <relationshipName>IndividualTarget</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>