force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__PerformanceMeasurementUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PerformanceMeasurementUnit__c</fullName>
    <label>PERFORMANCE MEASUREMENT UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PerformanceMeasurementUnit</valueSetName>
    </valueSet>
</CustomField>