force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/fields/clofor_com_cfs__PreviousYearPerformanceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousYearPerformanceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS YEAR PERFORMANCE ID</label>
    <referenceTo>clofor_com_cfs__IndividualPerformance__c</referenceTo>
    <relationshipLabel>NEXT YEAR INDIVIDUAL TARGET</relationshipLabel>
    <relationshipName>IndividualTarget</relationshipName>
    <type>Lookup</type>
</CustomField>