force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/recordTypes/clofor_com_cfs__IndividualTarget.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__IndividualTarget</fullName>
    <active>true</active>
    <label>INDIVIDUAL TARGET</label>
</RecordType>