force-app/main/default/objects/clofor_com_cfs__IndividualTarget__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__IndividualTargetName__c</columns>
    <columns>clofor_com_cfs__ACTIVE__c</columns>
    <columns>clofor_com_cfs__OrganizationTargetID__c</columns>
    <columns>clofor_com_cfs__EmployeeID__c</columns>
    <columns>clofor_com_cfs__FullName__c</columns>
    <columns>clofor_com_cfs__KPIID__c</columns>
    <columns>clofor_com_cfs__KpiName__c</columns>
    <columns>clofor_com_cfs__AnnaulTarget__c</columns>
    <columns>clofor_com_cfs__MonthlyTarget__c</columns>
    <columns>clofor_com_cfs__PerformanceMeasurementUnit__c</columns>
    <columns>clofor_com_cfs__AnnualTargetStartDate__c</columns>
    <columns>clofor_com_cfs__AnnualTargetEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>